Bug 355362 - Ctrl-Space and Ctrl-@ do nothing (again)
Summary: Ctrl-Space and Ctrl-@ do nothing (again)
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: keyboard (other bugs)
Version First Reported In: 15.08.3
Platform: Compiled Sources Linux
: NOR major
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-11-14 23:32 UTC by Richard Hansen
Modified: 2017-07-24 14:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This bug should with with the status fixed/resolved. (24.39 KB, image/png)
2017-01-10 13:37 UTC, Aniketh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Hansen 2015-11-14 23:32:28 UTC
This is NOT a duplicate of #341157.  I am running a version of Konsole with the fix for that bug already applied (v15.08.3).

The symptoms are identical to #341157, however:  If I hit Ctrl-Space in 'emacs -nw' or 'showkey -a' nothing appears.

Reproducible: Always

Steps to Reproduce:
1. start konsole
2. run 'showkey -a'
3. press Ctrl-Space

Actual Results:  
nothing

Expected Results:  
it should show ^@

Ubuntu 15.10 (wily) 64-bit.

The problem appears in both the packaged version of Konsole (konsole-4:15.08.2-0ubuntu2) and in Konsole v15.08.3 compiled from the KDE Git repository.

$ konsole --version
Qt: 5.4.2
KDE Frameworks: 5.15.0
Konsole: 15.08.0
Comment 1 Richard Hansen 2015-11-14 23:43:33 UTC
If I check out 9d062f1f522a50aa5ec2ae2a95ce6124b4427b5b (the Git commit that fixed bug #341157), build it, and run it, I still experience the same problem.  So, this must not be a regression; there must be some other underlying cause.

xev shows the Ctrl, Space, Space release, and Ctrl release events.
Comment 2 Richard Hansen 2015-11-15 01:35:06 UTC
I can get it to work by following these steps:
  1. edit the current profile
  2. go to the Keyboard tab
  3. click Edit (the selected entry is "Default (XFree 4)")
  4. click Add
  5. enter Space+Ctrl in the Key Combination column
  6. enter \x00 in the Output column
Should I need to do this?

Using gdb I noticed that for the Ctrl+Space QKeyEvent:
  * event->modifiers() & Qt::ControlModifier is true
  * event->key() is Qt::Key_Space (decimal 32, hex 0x20)
  * event->text().isEmpty() is true

Without the Space+Ctrl key binding, KeyboardTranslator::findEntry() returns an empty entry, which causes Vt102Emulation::sendKeyEvent() to send event->text(), which is empty.
Comment 3 Aniketh 2017-01-10 13:37:58 UTC
Created attachment 103327 [details]
This bug should with with the status fixed/resolved.

I guess for the Konsole version 15.08.0 (Tag 15.08.03) has fixed this issue. I would recommend making this bug's status as fixed/resolved. :)
Comment 4 Alex G 2017-07-20 00:30:53 UTC
This issue is still present in the latest (git head) version of konsole  17.11.70.

Space+Ctrl is present in the default keytab profile, namely Default (XFree 4).

Using the "test area" in Edit Current Profile/Keyboard/Edit, \x00 will appear in the output.

Strangely, when I run 'showkey -a' it doesn't register Ctrl-Space, or Ctrl-Shift-@.
 
The symptoms are exactly the same as Richard's above; 'xev' shows all the key presses.

I'm running the current git master branch of KDE:
  Konsole  17.11.70.
  Qt 5.7.1
  KDE Frameworks 5.36.0
  Plasma 5.10.90
Comment 5 Kurt Hindenburg 2017-07-24 13:52:32 UTC
Git commit 0cc7fecdd7bde4e427a17585e92e5248b013437e by Kurt Hindenburg.
Committed on 24/07/2017 at 13:50.
Pushed by hindenburg into branch 'master'.

Fix regression in pty()->write() usage

Correct usage of pty()->write(const QByteArray)
Related: bug 382654

M  +1    -1    src/Pty.cpp

https://commits.kde.org/konsole/0cc7fecdd7bde4e427a17585e92e5248b013437e
Comment 6 Kurt Hindenburg 2017-07-24 14:40:40 UTC
Git commit 2e74a1ba73ab96fd94effe50562ba374a5eeaa96 by Kurt Hindenburg.
Committed on 24/07/2017 at 14:38.
Pushed by hindenburg into branch 'Applications/17.08'.

Fix regression in pty()->write() usage

Correct usage of pty()->write(const QByteArray)
Related: bug 382654
(cherry picked from commit 0cc7fecdd7bde4e427a17585e92e5248b013437e)

M  +1    -1    src/Pty.cpp

https://commits.kde.org/konsole/2e74a1ba73ab96fd94effe50562ba374a5eeaa96