Fix regression in pty()->write() usage

Correct usage of pty()->write(const QByteArray)

BUG: 355362
BUG: 382654
(cherry picked from commit 0cc7fecdd7bde4e427a17585e92e5248b013437e)